{{$NEXT}}

0.10.20  2026-01-31T08:54:11+13:00
   - Use preset options when gcc detected #118

0.10.19  2026-01-08T07:17:06+13:00
   - Silence some more unused variable warnings/errors in C compilation #117

0.10.18  2026-01-07T09:56:37+13:00
   - Add LibXML::Document.new(:$root) option
   - Silence some unused variable warnings/errors in C compilation #117
   - Further tweak SAX initialization

0.10.17  2025-09-01T10:25:04+12:00
   - Further adjust #116 to work on Windows

0.10.16  2025-09-01T08:34:40+12:00
   - Further bed down fix #116 to ensure forward compatibility with
     libxml v2.10.0+ releases.

0.10.15  2025-09-01T07:14:41+12:00
   - Fix error-handling to handle updates to suppress-warnings()
     and suppress-errors() attributes. Issue introduced in 0.10.12
   - Fix SAX handler initialization for Debian libxml2 2.9.14
     security patches #116.

0.10.14  2025-06-09T08:30:57+12:00
   - Partially handle Dtd's in document ast(). Inline Dtd
     declarations are not handled yet.
   - Fix creation of stand-alone processing instructions; this also
     fixes ast() method on documents with processing instructions

0.10.13  2024-11-26T07:32:08+13:00
   - Fix failing libxml v2.14+ test in t/00dtd.t

0.10.12  2024-11-26T06:56:59+13:00
   - Filter suppressed errors and warnings early for improved error
     handling performance #115
   - Provide a domNodeSetAtPos() binding. Avoid direct access to
     xmlNodeSet C struct NodeTab field.
   - Re-enable local error handling for libxml 2.14, which resolves
     https://gitlab.gnome.org/GNOME/libxml2/-/issues/808.
   - Fix Dtd IO error handling by promoting some libxml2 warnings to errors.
   - Create t/META6.json for test suite modules and rename test modules
     from *.pm6 to *.rakumod
   - Remove internal class LibXML::HashMap::NodeSet, which is equivalent
     to LibXML::HashMap.^parameterize(LibXML::Node::Set)

0.10.11  2024-11-05T09:21:51+13:00